--- a/spa/index.html
+++ b/spa/index.html
@@ -7,9 +7,10 @@
     <title>Vanilla JS SPA</title>
     <link rel="icon" href="app/assets/favicon.png">
     <link rel="stylesheet" href="app/assets/style.css">
+    <style id="dynamic-styles"></style>
 </head>
 <body>
-    <main id="root"></main>
+    <div id="root"></div>
     <script src="app/index.js" type="module"></script>
 </body>
 </html>   
